test/types/collections/domIndices.good
domIndices.chpl:3: error: domains do not support '.indices'
