test/types/collections/domIndices.chpl
const D = {1..3};

writeln(D.indices);
